// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CitiesItem render Current city is active 1`] = `
<li
  className="locations__item"
  data-name="Amsterdam"
  onClick={[Function]}
>
  <a
    className="locations__item-link tabs__item tabs__item--active"
    href="#"
  >
    <span>
      Amsterdam
    </span>
  </a>
</li>
`;

exports[`CitiesItem render Current city is not active 1`] = `
<li
  className="locations__item"
  data-name="Amsterdam"
  onClick={[Function]}
>
  <a
    className="locations__item-link tabs__item "
    href="#"
  >
    <span>
      Amsterdam
    </span>
  </a>
</li>
`;
